# llvm-mos-sdk

mos-platform/: CMakeLists.txt
mos-platform/acarr-sbc1/: CMakeLists.txt  clang.cfg  link.ld
mos-platform/acarr-sbc1/crt0/: reset.s
mos-platform/acarr-sbc_v1/: CMakeLists.txt
mos-platform/rp6502/: open.c
